# pubmed-mcp

./: .gitignore  README.md  pyproject.toml
pubmed_mcp/: __init__.py  client.py  main.py  server.py
tests/: test_client.py  test_server.py
