[project]
name = "pubmed-mcp"
version = "0.1.0"
description = "HTTP service exposing PubMed search capabilities for Model Context Protocol integrations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.20",
    "anyio>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
